# PREVENT

./: .gitignore  Dockerfile  INSTALLATION.md  LICENSE  README.md
Exercise/: detect.py  liveFlameDetection.py  reader.py  red.py
ros2_ws/src/prevent/: CMakeLists.txt  package.xml
ros2_ws/src/prevent/launch/: sim_tb3.launch.py
ros2_ws/src/prevent/scripts/: bot_controller.py  vision_detector.py
ros2_ws/src/prevent/worlds/: bpminimap.world  fire.dae  fire.mtl  minimap.world
